--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "bcrypt-nodejs": "^0.0.3",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.3",
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "jwt-simple": "^0.5.1",
     "knex": "^0.12.9",
     "knex-populate": "^0.1.0",
     "morgan": "~1.8.1",
     "objection": "^0.7.12",
+    "passport": "^0.4.0",
+    "passport-jwt": "^3.0.1",
+    "passport-local": "^1.0.0",
     "pg": "^6.1.5",
     "serve-favicon": "~2.4.2"
   },
