--- a/package.json
+++ b/package.json
@@ -7,22 +7,21 @@
   },
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
-    "body-parser": "~1.17.1",
-    "cookie-parser": "~1.4.3",
-    "cors": "^2.8.3",
-    "debug": "~2.6.3",
-    "ejs": "~2.5.6",
-    "express": "~4.15.2",
-    "jwt-simple": "^0.5.1",
-    "knex": "^0.12.9",
-    "knex-populate": "^0.1.0",
-    "morgan": "~1.8.1",
-    "objection": "^0.7.12",
-    "passport": "^0.4.0",
-    "passport-jwt": "^3.0.1",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "debug": "^4.3.4",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "jwt-simple": "^0.5.6",
+    "knex": "^3.0.1",
+    "knex-populate": "^2.2.0",
+    "morgan": "^1.10.0",
+    "objection": "^3.1.2",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pg": "^6.1.5",
-    "serve-favicon": "~2.4.2"
-  },
-  "devDependencies": {}
+    "pg": "^8.11.3",
+    "serve-favicon": "^2.5.0"
+  }
 }
